backend and ui refactoring
